[tool.poetry]
name = "ekorpkit"
version = "0.1.41"
description = "ekorpkit: eKonomic Research Python Toolkit"
authors = ["Young Joon Lee <entelecheia@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ekorpkit" }]

[tool.poetry.scripts]
ekorpkit = "ekorpkit.cli:hydra_main"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
hyfi = "^0.2.2"
datasets = "^2.11.0"
transformers = "^4.27.4"
huggingface-hub = ">=0.8.1"
scikit-learn = ">=1.0.0"
ftfy = "^6.1.1"
pytablewriter = ">=0.64.0"
fugashi = { version = "^1.2.1", optional = true }
mecab-ko-dic = { version = "^1.0.0", optional = true }
mecab-python3 = { version = "^1.0.6", optional = true }

[tool.poetry.extras]
tokenizers = ["fugashi", "mecab-ko-dic", "mecab-python3"]


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.1"
setuptools-scm = "^7.1.0"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
flake8-pyproject = "^1.2.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
ipykernel = "^6.22.0"
hyfi = { path = "../hyfi", develop = true }


# [[tool.poetry.source]]
# name = "torch==1.11.0+cu113"
# url = "https://download.pytorch.org/whl/cu113"
# default = false
# secondary = false

[tool.black]
exclude = [
    '_version.py',
    'node_modules',
    '_build',
    'docs',
    'tests',
    'venv',
    '.copier-template',
    '.refs',
]

[tool.isort]
profile = "black"
skip = [
    '_version.py',
    'node_modules',
    '_build',
    'docs',
    'tests',
    'venv',
    '.copier-template',
    '.refs',
]

[tool.flake8]
ignore = ['F401', 'E501', 'W503']
exclude = [
    "node_modules",
    "_build",
    "docs",
    "tests",
    "venv",
    ".copier-template",
    ".refs",
]
per-file-ignores = ['__init__.py:F401', '_version.py:W292']

[tool.mypy]
namespace_packages = true
exclude = [
    "node_modules",
    "build",
    "_build",
    "dist",
    "docs",
    "tests",
    "venv",
    ".copier-template",
    ".refs",
]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.8"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
tag_format = "v$version"

[tool.setuptools_scm]
write_to = "ekorpkit/_version.py"
write_to_template = '__version__ = "{version}"'
tag_regex = '^(?P<prefix>v)?(?P<version>[^\+]+)(?P<suffix>.*)?$'

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "ekorpkit/_version.py:__version__"
version_source = "tag"
commit_version_number = true                                    # required for version_source = "tag"
commit_subject = "chore(release): :rocket: {version} [skip ci]"
prerelease_tag = "rc"
major_on_zero = true
tag_commit = true
changelog_file = "CHANGELOG.md"
upload_to_repository = true
upload_to_release = true
build_command = "poetry build --no-cache"
hvcs = "github"                                                 # hosting version control system, gitlab is also supported

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'
